# yolo_test

./: event.py  event_conf.yaml  pyproject.toml  rgb.py  rgb_conf.yaml
conf/: event_data.yaml  rgb_data.yaml
datasets/: basedataset.py  eventdataset.py  rgbdataset.py
engine/: basetrainer.py  rgbtrainer.py  rgbvalidator.py  trainer.py  validator.py
