[project]
name = "ultramodel"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "ultralytics",
    "wandb",
    "einops",
    "opencv-python",
    "onnx",
    "onnxslim",
    "onnxruntime",
    "colorama",
    "flatbuffers",
    "pycocotools",
    "faster-coco-eval",
    "rerun-sdk",
    "albumentations",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
